--- a/css/project-card.css
+++ b/css/project-card.css
@@ -96,7 +96,7 @@
 
 .project-section{
     width: 100vw;
-    background-color: rgb(221, 208, 208);
+    background-color: var(--bgCol);
     padding: 20px 0 40px 0;
 }
 
