--- a/css/testimonial.css
+++ b/css/testimonial.css
@@ -1,6 +1,6 @@
 .testimonial-section{
     width: 100vw;
-    background-color: rgb(221, 208, 208);
+    background-color: var(--bgCol);
     padding: 20px 0 40px 0;
 }
 
