--- a/css/project-card.css
+++ b/css/project-card.css
@@ -11,9 +11,7 @@
     outline: none;
     width: 130px;
     border: none;
-    box-shadow: 0px 0px 20px -5px var(--black);
     color: var(--grey);
-    border-radius: 10px;
     cursor: pointer;
     font-size: 20px;
 }
@@ -24,7 +22,7 @@
 }
 
 .btn:hover{
-    box-shadow: 0px 0px 20px var(--black);
+    background-color: var(--secCol);
 }
 
 .plans{
@@ -52,8 +50,6 @@
     margin: 15px;
     width: 330px;
     height: 500px;
-    /* border: 1px solid black; */
-    border-radius: 15px;
     background-color: #f8f9fc;
     box-shadow: 0 0 3px rgba(60, 72, 88, 0.15) !important;
     border-bottom: 3px solid #adb5bd !important;    
@@ -79,8 +75,6 @@
 .plan-image > img{
     width: inherit;
     height: 250px;
-    border-top-right-radius: 15px;
-    border-top-left-radius: 15px;
 }
 
 .plan-amount{
