--- a/css/skills.css
+++ b/css/skills.css
@@ -29,6 +29,7 @@
     display: flex;
     justify-content: space-between;
     padding: 5px 10px;
+    font-weight: bold;  
 }
 
 .skill-bar{
@@ -170,6 +171,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    font-weight: bold;  
 }
 
 .skill-right .img img{
