--- a/css/testimonial.css
+++ b/css/testimonial.css
@@ -35,7 +35,7 @@
     margin: 20px 30px;
     margin-right: 0;
     margin-bottom: 0;
-    display: flex;
+    display: none;
     overflow-x: hidden;
 }
 
