--- a/src/components/Testimonial/Testimonial.style.css
+++ b/src/components/Testimonial/Testimonial.style.css
@@ -10,6 +10,10 @@
    justify-content: center;
 }
 
+.owl-dot.active > span {
+   background-color: var(--priCol) !important;
+}
+
 .container {
    width: 300px;
    height: 400px;
@@ -46,7 +50,7 @@
    border-top-right-radius: 10px;
    display: flex;
    justify-content: center;
-   align-items: end;
+   align-items: flex-end;
    border-top-left-radius: 10px;
    position: relative;
 }
@@ -96,5 +100,5 @@
    align-items: center;
    font-size: small;
    text-align: justify;
-   padding: 0 15px;
+   padding: 0 25px;
 }
